# ezra-second-brain-template

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  README.md  README.zh-CN.md  SCHEMA.md  index.md  package.json  pyproject.toml
config/: brain.example.yaml  categories.yaml
docs/: architecture.md  commands.zh-CN.md  daily-report.md  feishu-lark-cli.zh-CN.md  privacy.md
examples/data/daily/: work_report.jsonl
examples/data/inbox/: 2026-01-01.md
scripts/: article_payload_builder.py  article_topic_enricher.py  article_url_ingest.py  brain_cli.py  document_article_ingest.py  document_extract.py  format_reply.py  git_sync.py  install-node.js  install.py  juliang_yuntu_topic_builder.py  lark_doc_ingest.py  rebuild_index.py  telegram_brain_router.py  validate_brain.py  wechat_mp_extract.py  wechat_mp_playwright_fetch.py  work_report.py
templates/: article.md  daily.md  expense_month.md  generic_note.md  health_sleep.md  project.md  review.md
tests/: test_article_payload_builder.py  test_article_topic_enricher.py  test_article_url_ingest.py  test_brain_cli.py  test_document_ingest.py  test_juliang_yuntu_topic_builder.py  test_lark_doc_ingest.py  test_telegram_brain_router.py  test_validate_brain.py  test_wechat_mp_extract.py  test_work_report.py
tests/fixtures/: article.md
wiki/articles/: index.md
wiki/business-intel/: index.md
wiki/finance/: index.md
wiki/health/: index.md
wiki/ideas/: index.md
wiki/life/: index.md
wiki/people/: index.md
wiki/projects/: index.md
wiki/research/: index.md
wiki/travel/: index.md
(+3 files in other folders)
