[project]
name = "ezra-second-brain-template"
version = "0.1.0"
description = "Filesystem-first personal second brain template for Telegram/Hermes workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
